Closed Bug 1175164 Opened 11 years ago Closed 11 years ago

Do not expose MathML semantics element in the accessibility tree

Categories

(Core :: Disability Access APIs, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: jdiggs, Assigned: fwang)

References

Details

Attachments

(2 files, 1 obsolete file)

Attached file fraction.html —
Steps to reproduce: 1. Open the attached test case in Firefox. 2. Use Accerciser to view the accessibility tree. Expected result: There would be no objects with ROLE_UNKNOWN. Actual result: Both of the examples with the semantics element have an accessible object with ROLE_UNKNOWN as the child of the ROLE_MATH element.
Summary: Do not expose MathML semantics element in the accessibility tree for ATK → Do not expose MathML semantics element in the accessibility tree
Blocks: 1175269
Attached patch Patch (obsolete) — — Splinter Review
Assignee: nobody → fred.wang
Status: NEW → ASSIGNED
Attachment #8623309 - Flags: review?(surkov.alexander)
summary of the discussion: neither semantics nor annotation elements have a presentation or provide a special value for assistive technology. If the browser reveals them via UI for all users then the assistive technology users are supposed to use on that UI.
Comment on attachment 8623309 [details] [diff] [review] Patch Review of attachment 8623309 [details] [diff] [review]: ----------------------------------------------------------------- ::: accessible/base/Role.h @@ +930,3 @@ > * A MathML stacked (rows of numbers) element (mstack in MathML). > */ > MATHML_STACK = 161, that seems to be safe but would be really nicer to not have gaps in numbering (there's no much of items underneath of this one)
Attachment #8623309 - Flags: review?(surkov.alexander) → review+
and please change uuid of the IDL
Attached patch Patch V2 — — Splinter Review
Attachment #8623309 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: