Bug 1175164 - Do not expose MathML semantics element in the accessibility tree. r=surkov

--HG--
extra : rebase_source : 4974b9f27e9ec09b666fce81fd9a45d7b7f757b1